--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>قالب المدونة · Bootstrap v5.3</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog-rtl/">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     
 
     
@@ -170,7 +170,7 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">العالم</a>
+      <a class="p-2 link-secondary" href="#">שלום</a>
       <a class="p-2 link-secondary" href="#">الولايات المتحدة</a>
       <a class="p-2 link-secondary" href="#">التقنية</a>
       <a class="p-2 link-secondary" href="#">التصميم</a>
